--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,11 @@
 * {
-  padding: 0;
-  margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+.container {
+    min-height: 70vh;
+    margin: 25px 200px;
+    display: flex;
 }
