--- a/styles/pages/pokemonId.module.css
+++ b/styles/pages/pokemonId.module.css
@@ -23,27 +23,77 @@
 
 .pokedex {
     align-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 20px;
-    width: 80%;
+    width: 40%;
     border: 1px solid #f8f8f8;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 4px 4px 4px 0px inset #ccc;
     background-color: #fefefe;
-    overflow-y: scroll;
-    max-height: 500px;
 }
 
-.pokedex_title {
+.pokedex_title,
+.pokedex_subtitle {
     font-size: 1.5em;
     font-weight: bold;
     border-bottom: 1px solid #e1e1e1;
+    text-transform: capitalize;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
-.card_container {
+.pokemon_type {
+    display: inline;
+    font-weight: bold;
+    text-transform: capitalize;
+    border-radius: 5px;
+    padding: 5px;
+    margin-right: 10px;
+}
+
+.pokedex_container {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    padding: 10px;
+}
+.pokedex_pokemon_pic {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+.pokemon_id{
+    /* margin: 0 auto; */
+    background-color: #ff3b3b;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.pokedex_pokemon_info {
+    min-width: 70%;
+}
+.pokemon_status_container{
+    margin-bottom: 20px;
+}
+
+.buttons_container {
+    margin: 25px 0 10px 0;
+}
+
+.buttons_container a{
+    margin-right: 20px;
+    border-radius: 5px;
+    padding: 15px;
+    background: none;
+    cursor: pointer;
+    color: black;
+    transition: 0.7s;
+}
+
+.buttons_container a:hover{
+    background-color: #ccc;
+}
